# AcidMonitorr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: docker-publish.yml  release.yml
css/: animations.css  components.css  main.css  responsive.css
js/: api.js  calendar.js  config.js  main.js  navigation.js  notifications.js  search.js  stats.js  ui.js  utils.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  server.rs  tray.rs
src-tauri/src/api/: flaresolverr.rs  jackett.rs  mod.rs  plex.rs  prowlarr.rs  radarr.rs  rdtclient.rs  sonarr.rs
src/js/: api.js  calendar.js  config.js  events.js  main.js  navigation.js  notifications.js  search.js  stats.js  ui.js  utils.js
