[package]
name = "acidmonitorr"
version = "1.0.0"
description = "AcidMonitorr - Media Command Center"
authors = ["AcidMonitorr"]
edition = "2021"

[lib]
name = "acidmonitorr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs = "6"
urlencoding = "2"
base64 = "0.22"
